--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ h1{
 }
 /*Projects Page*/
 #second-page{
-    background-image: url(image/tofan-teodor-unsplash.jpg);
+    background-image: url("image/tofan-teodor-unsplash.jpg");
 }
 main{
     margin: auto;
