--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
 }
 body{
-    background-image: url("image/michael-dziedzic-unsplash.jpg");
+    background-image: url(image/michael-dziedzic-unsplash.jpg);
     background-repeat: no-repeat;
     background-size:cover; 
     background-position: center;
